[gd_scene load_steps=7 format=3 uid="uid://dshpn8l2mhj61"]

[ext_resource type="Texture2D" uid="uid://bqbvrurypofs2" path="res://icon.svg" id="1_mh4rm"]
[ext_resource type="Script" path="res://drawing_point.gd" id="1_ryora"]
[ext_resource type="Texture2D" uid="uid://cobkurigmxbow" path="res://images/firefly.png" id="2_lyo3d"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mvfed"]

[sub_resource type="Gradient" id="Gradient_64t7c"]
colors = PackedColorArray(1, 1, 0.0156863, 1, 1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_objm8"]
size = Vector2(24, 24)

[node name="Drawing_Point" type="Area2D"]
script = ExtResource("1_ryora")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_mvfed")
emitting = false
lifetime_randomness = 0.3
fixed_fps = 30
local_coords = true
draw_order = 1
texture = ExtResource("2_lyo3d")
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
angular_velocity_min = 50.0
angular_velocity_max = 100.0
angle_max = 720.0
scale_amount_min = 0.3
scale_amount_max = 0.3
color_ramp = SubResource("Gradient_64t7c")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_mh4rm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_objm8")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
